force-app/main/default/objects/Opportunity/fields/Aceite_de_Proposta_Enviado__c.field-meta.xml
<CustomField>
    <fullName>Aceite_de_Proposta_Enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aceite de Proposta Enviado</label>
    <type>Checkbox</type>
</CustomField>