force-app/main/default/objects/Opportunity/fields/Contato_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contato_Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato Contrato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>