force-app/main/default/objects/Opportunity/fields/Data_Assinatura_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Data_Assinatura_Contrato__c</fullName>
    <description>Data de assinatura usada nas clausulas finais do contrato.</description>
    <label>Data Assinatura Contrato</label>
    <type>Date</type>
</CustomField>