force-app/main/default/objects/Opportunity/fields/Data_Envio_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Data_Envio_Proposta__c</fullName>
    <label>Data Envio Proposta</label>
    <type>Date</type>
</CustomField>