force-app/main/default/objects/Opportunity/fields/Dona_da_Obra__c.field-meta.xml
<CustomField>
    <fullName>Dona_da_Obra__c</fullName>
    <description>Nome da dona da obra para preenchimento automatico do contrato.</description>
    <label>Dona da Obra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>