force-app/main/default/objects/Opportunity/fields/Kickoff_realizado__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_realizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kickoff realizado</label>
    <type>Checkbox</type>
</CustomField>