force-app/main/default/objects/Opportunity/fields/Observacoes_PMO__c.field-meta.xml
<CustomField>
    <fullName>Observacoes_PMO__c</fullName>
    <label>Observações PMO</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>