force-app/main/default/objects/Opportunity/fields/Prazo_Parecer_Dias_Extenso__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Parecer_Dias_Extenso__c</fullName>
    <description>Prazo do parecer por extenso para clausulas que exigem numero e texto.</description>
    <label>Prazo Parecer (extenso)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>