force-app/main/default/objects/Opportunity/fields/Proposta__c.field-meta.xml
<CustomField>
    <fullName>Proposta__c</fullName>
    <label>Proposta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>