force-app/main/default/objects/Opportunity/fields/Quantidade_Visitas__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Visitas__c</fullName>
    <description>Quantidade de visitas mensais prevista para monitoramento remoto.</description>
    <label>Quantidade de Visitas</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>