force-app/main/default/objects/Opportunity/fields/Servico__c.field-meta.xml
<CustomField>
    <fullName>Servico__c</fullName>
    <label>Servico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitoramento Remoto</fullName>
            </value>
            <value>
                <fullName>Monitoramento Alocado</fullName>
            </value>
            <value>
                <fullName>Ação Judicial</fullName>
            </value>
            <value>
                <fullName>Análise Comparativa</fullName>
            </value>
            <value>
                <fullName>Análise de Pleito</fullName>
            </value>
            <value>
                <fullName>Assessoria Técnica Especializada</fullName>
            </value>
            <value>
                <fullName>Assessoria Técnica e Jurídica</fullName>
            </value>
            <value>
                <fullName>Assist. Téc. em Arbitragem</fullName>
            </value>
            <value>
                <fullName>Assist. Téc. e Juríd. em Arbitragem</fullName>
            </value>
            <value>
                <fullName>Assist. Téc. em Processo Judicial</fullName>
            </value>
            <value>
                <fullName>Assist. Juríd. em Arbitragem</fullName>
            </value>
            <value>
                <fullName>Atuação em Mediação</fullName>
            </value>
            <value>
                <fullName>Auditoria Contratual</fullName>
            </value>
            <value>
                <fullName>Célula de Administração Contratual</fullName>
            </value>
            <value>
                <fullName>Diagnóstico de Contrato</fullName>
            </value>
            <value>
                <fullName>Diagnóstico + Pleito</fullName>
            </value>
            <value>
                <fullName>Dispute Board</fullName>
            </value>
            <value>
                <fullName>Due Diligence</fullName>
            </value>
            <value>
                <fullName>Elaboração de Carta</fullName>
            </value>
            <value>
                <fullName>Elaboração de Cronograma Baseline</fullName>
            </value>
            <value>
                <fullName>Elaboração de ECA Técnico</fullName>
            </value>
            <value>
                <fullName>Elaboração de Manual de Compliance</fullName>
            </value>
            <value>
                <fullName>Elaboração de Matriz de Risco</fullName>
            </value>
            <value>
                <fullName>Elaboração de Minuta de Contrato</fullName>
            </value>
            <value>
                <fullName>Elaboração de Parecer Técnico</fullName>
            </value>
            <value>
                <fullName>Elaboração de Pleito</fullName>
            </value>
            <value>
                <fullName>Elaboração de Time Impact Analysis</fullName>
            </value>
            <value>
                <fullName>Elaboração de Tréplica</fullName>
            </value>
            <value>
                <fullName>Gerenciamento de Projeto</fullName>
            </value>
            <value>
                <fullName>LTA (Long Term Agreement)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>