force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Aberto</fullName>
            </value>
            <value>
                <fullName>Revisão</fullName>
            </value>
            <value>
                <fullName>Aceita</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Encerrada</fullName>
            </value>
            <value>
                <fullName>Recusada pelo cliente</fullName>
            </value>
            <value>
                <fullName>Inviável</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>