force-app/main/default/objects/Opportunity/fields/Taxa_Sucesso_Pleito__c.field-meta.xml
<CustomField>
    <fullName>Taxa_Sucesso_Pleito__c</fullName>
    <description>Taxa percentual de sucesso sobre o proveito economico do pleito.</description>
    <label>Taxa Sucesso Pleito (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>