force-app/main/default/objects/Opportunity/fields/Valor_Unico_Pleito__c.field-meta.xml
<CustomField>
    <fullName>Valor_Unico_Pleito__c</fullName>
    <description>Valor unico cobrado para elaboracao de pleito.</description>
    <label>Valor Unico Pleito</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>