force-app/main/default/objects/Opportunity/recordTypes/Assistencia_Tecnica_Judicial.recordType-meta.xml
<RecordType>
    <fullName>Assistencia_Tecnica_Judicial</fullName>
    <active>true</active>
    <businessProcess>Processo_Contratos</businessProcess>
    <label>Assistencia Tecnica Judicial</label>
</RecordType>