force-app/main/default/objects/Opportunity/recordTypes/Diagnostico_de_Contrato.recordType-meta.xml
<RecordType>
    <fullName>Diagnostico_de_Contrato</fullName>
    <active>true</active>
    <businessProcess>Processo_Contratos</businessProcess>
    <label>Diagnostico de Contrato</label>
</RecordType>