force-app/main/default/objects/Opportunity/recordTypes/Elaboracao_de_Parecer.recordType-meta.xml
<RecordType>
    <fullName>Elaboracao_de_Parecer</fullName>
    <active>true</active>
    <businessProcess>Processo_Contratos</businessProcess>
    <label>Elaboracao de Parecer</label>
</RecordType>