force-app/main/default/objects/Opportunity/recordTypes/Monitoramento_Remoto.recordType-meta.xml
<RecordType>
    <fullName>Monitoramento_Remoto</fullName>
    <active>true</active>
    <businessProcess>Processo_Contratos</businessProcess>
    <label>Monitoramento Remoto</label>
</RecordType>