force-app/main/default/objects/Opportunity/listViews/VENDIDOS_2024.listView-meta.xml
<ListView>
    <fullName>VENDIDOS_2024</fullName>
    <columns>Proposta__c</columns>
    <columns>Servico__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Data_Envio_Proposta__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2024</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>3/15/2024</value>
    </filters>
    <label>VENDIDOS 2024</label>
</ListView>