force-app/main/default/objects/Opportunity/listViews/X2024.listView-meta.xml
<ListView>
    <fullName>X2024</fullName>
    <columns>Proposta__c</columns>
    <columns>Servico__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Status__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Data_Envio_Proposta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Data_Envio_Proposta__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2023</value>
    </filters>
    <filters>
        <field>Data_Envio_Proposta__c</field>
        <operation>lessThan</operation>
        <value>1/1/2025</value>
    </filters>
    <label>PROPOSTAS 2024</label>
</ListView>